--- a/index.html
+++ b/index.html
@@ -22,33 +22,46 @@
     </div>
   </nav>
   <div class="container">
-    <ul>
-      <li>
+    <ul class="collection">
+      <li class="collection-item">
+        <h4 class="">Kế hoạch:</h4>
+        <div class="container">
+          <table class="responsive-table striped">
+            <thead>
+              <tr>
+                <th>Thời gian</th>
+                <th>Tên</th>
+                <th>Hoàn thành</th>
+              </tr>
+            </thead>
+            <tbody id="planning-data-body"></tbody>
+          </table>
+        </div>
+      </li>
+      <li class="collection-item">
         <h4>Tài sản:</h4>
         <div class="container">
           <table class="responsive-table striped">
             <thead>
               <tr>
-                <th>
-                  No.
-                </th>
-                <th>
-                  Tên
-                </th>
-                <th>
-                  Giá
-                </th>
+                <th>No.</th>
+                <th>Tên</th>
+                <th>Giá</th>
               </tr>
             </thead>
             <tbody id="assets-data-body"></tbody>
           </table>
         </div>
       </li>
-      <hr>
     </ul>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
+  <script src="https://momentjs.com/downloads/moment-with-locales.js"></script>
+  <script src="/assets/js/vnd.js"></script>
+  <script src="/assets/js/createContents.js"></script>
   <script src="/assets/js/assets.js"></script>
+  <script src="/assets/js/planning.js"></script>
 </body>
 
 </html>
