--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="container">
     <ul class="collection">
       <li class="collection-item">
-        <h4 class="">Kế hoạch:</h4>
+        <h5 class="">Kế hoạch</h5>
         <div class="container">
           <table class="responsive-table striped">
             <thead>
@@ -39,7 +39,7 @@
         </div>
       </li>
       <li class="collection-item">
-        <h4>Tài sản:</h4>
+        <h5>Tài sản</h5>
         <div class="container">
           <table class="responsive-table striped">
             <thead>
