--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       </li>
     </ul>
   </div>
+  <script src="/assets/js/main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
   <script src="https://momentjs.com/downloads/moment-with-locales.js"></script>
